packages/errors/test/__snapshots__/FIREFOX_CDP_FAILED_TO_CONNECT.ansi
[31mFailed to spawn CDP with Firefox. Retrying...[39m